--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>Document</title>
   </head>
   <body>
-<section>
 <header>
-  <p>Rio Cofee</p>
+  <div>Rio Cofee</div>
   <nav>
     <ul>
       <li>
@@ -30,6 +29,5 @@
   </nav>
   <a href="">Contact</a>
 </header>
-</section>
 </body>
 </html>
